# movieinsights

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini  使用说明书.docx
.github/workflows/: main.yml
share/: Demo.sqlite
src/: __init__.py  config.json  data.py  graph.py  logger.py  main.py  out.gv  scraper.py  test_draw_wordcloud.py  test_scraper.py  test_search.py  test_zhipuai.py  utils.py  zhipu_batch.py
src/movieinsights/: __init__.py  data.py  graph.py  gui.py  logger.py  main.py  scraper.py  spider.py  zhipu_batch.py
tests/: test_scraper.py  test_search.py  test_version.py
